Minor spacing fix

--- a/browser/scss/comments/comments.scss
+++ b/browser/scss/comments/comments.scss
@@ -12,10 +12,12 @@
 	}
 	.comment-buttons{
 		font-size: 0.85em;
-		padding-left: 10px;
 	}
 	.md-icon-button{
 		margin: 0;
-		padding: 0;
+		padding: 0
+	}
+	.voteCount{
+		padding-right: 10px;
 	}
 }
